static/css/main.css
html,
body {
  padding: 0px;
  margin: 0px;
  box-sizing: border-box;
  color: #2c3e50;
}

body {
  /* font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif; */
  /* font-family: Roboto, sans-serif; */
  font-family: "Open Sans", sans-serif;
  line-height: 1.8rem;
}

.header {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  flex-wrap: wrap;
  align-items: center;
  border-bottom: 0.2rem solid #f8a11a !important;
  padding: 0.5rem 1.5rem;
  line-height: 2.2rem;
  position: fixed;
  top: 0;
  left: 0;
  z-index: 20;
  right: 0;
  background-color: #fff;
  box-sizing: border-box;
}
.footer {
  padding: 1.5rem 0;
  border-top: 1px solid #eaecef;
  text-align: center;
  color: #4e6e8e;
  max-height: 50px;
}

.header .company-info {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-items: center;
}

.header .company-info img {
  height: 2.2rem;
  min-width: 2.2rem;
  margin-right: 0.8rem;
}

.header .company-info .site-name {
  font-size: 1.3rem;
  font-weight: 600;
  color: #2c3e50;
  position: relative;
}

.header .menu ul {
  list-style: none;
  padding: 0px;
  margin: 0px;
}
.header .menu li {
  display: inline-block;
  padding: 5px 10px;
}
.header .menu a {
  color: #2c3e50;
  text-decoration: none;
  padding: 2px 2px;
}

.header .menu a.active {
  margin-bottom: -2px;
  border-bottom: 2px solid #f9a92c;
}
.header .menu a:hover {
  margin-bottom: -2px;
  border-bottom: 2px solid #f9a92c;
}

#content {
  padding: 3.6rem 2rem 0;
  max-width: 960px;
  margin: 0 auto;
}

a,
p a code {
  color: #f8a11a;
}

.banner {
  display: flex;
}
.banner .content {
  display: flex;
  flex-direction: column;
  align-items: center;
  width: 100%; /* required for IE */
}

.hero {
  display: flex;
  flex-direction: row-reverse;
  justify-content: center;
  align-items: center;
  flex-wrap: wrap;
  text-align: center;
}
.hero-intro {
  margin: 1.8rem auto;
  line-height: 4rem;

  /* layout fix for IE */
  flex-basis: 60%;
  flex-grow: 1;
  flex-shrink: 0;
}
.hero-intro h1 {
  font-size: 3rem;
}
.hero img {
  display: block;
  margin: 3rem auto 1.5rem;
  color: #a1a1af;
  box-shadow: 2px 4px 1rem 1px #100e17;
  border-radius: 1rem;
  max-width: 250px !important;
  max-height: 250px !important;
}
.hero-description {
  width: 100%;
}

.front-subline {
  max-width: 35rem;
  font-size: 1.6rem;
  line-height: 1.3;
  text-align: center;
}

section .item h3 {
  display: inline-block;
}

.section-title h2 {
  font-size: 2.2rem;
  border-bottom: 3px solid #f8a11a;
  display: inline-block;
  margin: 0 0 2em 0;
  padding: 0 0.75em 0.5em 0;
}

.section-separator {
  margin: 4em 0 4em 0;
  border: 1px solid hsla(197, 8%, 84%, 0.75);
}

.section-content {
  display: flex;
  align-items: flex-start;
  flex-wrap: wrap;
  margin: 0 0 2em -3em;
  width: calc(100% + 3em);
}
.section-content article {
  justify-content: center;
  display: flex;
  flex-direction: column;
  margin: 0 0 3em 3em;
  position: relative;
  width: calc(50% - 3em);
}
.item h3 {
  font-size: 1.65rem;
  padding-bottom: 0.3rem;
  border-bottom: 1px solid #eaecef;
}
.home-site-logo {
  height: 36px;
  width: 36px;
  margin-right: 10px;
}

.section-headline {
  display: flex;
  align-items: center;
}
.section-headline h3 {
  font-weight: 500;
}

.button {
  transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out;
  background-color: transparent;
  border-radius: 0.375em;
  border: 0;
  box-shadow: inset 0 0 0 2px #f8a11a;
  cursor: pointer;
  display: inline-block;
  font-family: Roboto Slab, serif;
  font-size: 0.8em;
  font-weight: 700;
  height: 3.5em;
  letter-spacing: 0.075em;
  line-height: 3.5em;
  padding: 0 2.25em;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  white-space: nowrap;
}

article.hobby-wrapper {
  /*Needs to be specific, so article is necessary in front of classname above */
  width: calc(33% - 3em);
}
.hobby {
  display: block;
  overflow: hidden;
  border-radius: 0.375em;
  border: 0;
  width: 100%;
}

.hobby .hobby-image {
  display: block;
  margin: 0 0 1.5em 0;
  border-radius: 0.375em;
  border: 0;
  position: relative;
  transition: transform 0.2s ease;
  width: 100%;
  max-width: 350px !important;
}

.hobby .hobby-image:hover {
  transform: scale(1.075);
}

.button.filled {
  background-color: #f8a11a;
  color: #fff !important;
}

#contact-message strong {
  color: white !important;
}
.contact-me-icons {
  list-style: none;
  display: inline-block;
  padding-left: 1em;
}

.contact-me-icons img {
  height: 24px;
  width: 24px;
}
.contact-me-icons li {
  display: inline-block;
  padding: 0px 10px;
}
.contact-me-icons li a > i {
  font-size: 2em;
}

/* Tooltip Reference https://www.w3schools.com/css/css_tooltip.asp */
.tooltip {
  position: relative;
}
.tooltip .tooltiptext {
  visibility: hidden;
  background-color: #555;
  color: #fff;
  text-align: center;
  border-radius: 6px;
  padding: 3px 0;

  /* Position the tooltip */
  position: absolute;
  z-index: 1;
}
.tooltip:hover .tooltiptext {
  visibility: visible;
}
.tooltip .tooltiptext {
  width: 100px;
  bottom: 100%;
  left: 50%;
  margin-left: -50px; /* Use half of the width (120/2 = 60), to center the tooltip */
}
/* tooltip arrow */
.tooltip .tooltiptext::after {
  content: " ";
  position: absolute;
  top: 100%; /* At the bottom of the tooltip */
  left: 50%;
  margin-left: -5px;
  border-width: 5px;
  border-style: solid;
  border-color: #555 transparent transparent transparent;
}
.tooltip .tooltiptext {
  opacity: 0;
  transition: opacity 1s;
}
.tooltip:hover .tooltiptext {
  opacity: 1;
}
.contact-form {
  display: flex;
}
.contact-form .form-fields {
  flex: 1 1 100%;
  display: flex;
  flex-direction: column;
  justify-content: space-evenly;
}
.contact-form .field {
  margin: 10px 10px;
}
.contact-form input[type="email"],
.contact-form input[type="password"],
.contact-form input[type="text"],
.contact-form select,
.contact-form textarea {
  appearance: none;
  background: #fff;
  border-radius: 0.375em;
  border: none;
  border: 1px solid hsla(197, 8%, 84%, 0.75);
  color: inherit;
  display: block;
  outline: 0;
  padding: 0 1em;
  text-decoration: none;
  width: 100%;
  height: 2.75em;
  font-size: 1rem;
}
.contact-form textarea {
  padding: 0.75em 1em;
  height: unset;
}
.contact-form .button {
  color: #f8a11a;
}
.contact-form .button.filled {
  background-color: #f8a11a;
  color: #fff;
}
.page-title h2 {
  border-bottom: 3px solid #f8a11a;
  display: inline-block;
}
ul.actions {
  list-style: none;
  padding: 0;
  margin: 0;
}
.list-published-on {
  font-size: 0.9em;
  font-weight: 400;
  letter-spacing: 0.075em;
  margin-top: -0.5em;
  text-transform: uppercase;
  color: #adadad;
}
header.main h1 {
  font-size: 2.2rem;
  margin: 3rem 0;
  line-height: 1.25;
}
/* customize default code block */
.code {
  overflow-x: auto;
}
/* extend dark background to full code block and not just initial device display width */
.code .highlight > pre {
  display: inline-block;
  padding: 1rem;
}

@media (max-width: 600px) {
  .hero {
    text-align: center;
  }
  .section-content article {
    width: 100%;
  }
}

@media screen and (max-width: 767px) {
  .hero img {
    max-width: 190px !important;
    max-height: 190px !important;
  }
}

@media screen and (max-width: 419px) {
  #content {
    margin: 2rem auto;
  }
  .hero-intro {
    margin: auto;
  }
  .hero-intro h1 {
    font-size: 1.9rem;
    line-height: 2.5rem;
  }

  .hero img {
    max-height: 210px;
    margin: 2rem auto 1.2rem;
  }

  .hero .front-subline {
    font-size: 1.2rem;
  }
  .hero .action,
  .hero .description,
  .hero h1 {
    margin: 1.2rem auto;
  }

  .header {
    padding: 0.5rem 0.5rem;
    line-height: 2rem;
  }

  .header .company-info img {
    height: 1.9rem;
    min-width: 2rem;
    margin: 0;
  }

  .header .company-info .site-name {
    font-size: 1rem;
    font-weight: 600;
    position: relative;
  }

  .header .menu li {
    padding: 0px 2px;
  }
}

